# BibliotecaDigital

./: README.md
src-tauri/: .env  .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/migrations/2024-06-24-142001_create_livros_and_dependencis/: down.sql  up.sql
src-tauri/migrations/2024-07-03-180305_criar_usuarios/: down.sql  up.sql
src-tauri/migrations/2024-07-03-235213_criar_logs/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  models.rs  schema.rs  tauri_commands.rs
src-tauri/src/models_lib/: autor.rs  autor_livro.rs  categoria.rs  categoria_livro.rs  editora.rs  emprestimo.rs  idioma.rs  livro.rs  logs.rs  mod.rs  pessoa.rs  usuario.rs
src-tauri/ui/: index.html
src-tauri/ui/css/: login.css  main.css
src-tauri/ui/home/: index.html
src-tauri/ui/livro/: form.html  form.js  index.html  script.js
src-tauri/ui/livro/css/: main.css
src-tauri/ui/pessoa/: form.html  form.js  index.html  script.js
src-tauri/ui/pessoa/css/: main.css
src-tauri/ui/reserva/: form.html  form.js  index.html  script.js
src-tauri/ui/reserva/css/: main.css
src-tauri/ui/scripts/: login.js
src/ui/: index.html  main.js  styles.css
